--- a/aboutMe.html
+++ b/aboutMe.html
@@ -2,16 +2,16 @@
 <html>
 <head>
 	<title>A Website about Derek Pang</title>
-	<style type="text/css" src="aboutMe.css"></style>
+	<link rel="stylesheet" type="text/css" href="aboutMe.css">
 </head>
 <body>
 	<h1>Hi I'm Derek Pang.</h1>
-	
+
 	<h2>Here is some basic information about me!</h2>
 
 	<ol>
 		<li>I have a cat named Stella.</li>
-		<li>I am from Charlotte, NC</li>
+		<li>Green is my favorite color.</li>
 		<li>I think coding is fun!</li>
 	</ol>
 
